# context-health

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  context-health-plugin-build-spec.md  package.json  settings.json
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: METHODOLOGY.md
docs/blog/: building-context-health.md
eval/: drift-pairs.json  run-eval.js
fixtures/: hook-post-tool-error.json  hook-pre-tool.json  hook-session-start.json  hook-stop-active.json  hook-user-prompt.json  statusline-healthy.json  statusline-red-fill.json
hooks/: hooks.json
monitors/: monitors.json
statusline/: statusline.js
test/: ch-config.test.js  config.test.js  confusion.test.js  context-math.test.js  distraction.test.js  eval-runner.test.js  evaluate-drift.test.js  integration.test.js  io.test.js  metrics.test.js  render.test.js  review-fixes.test.js  session-signals.test.js  severity.test.js  state-concurrency.test.js  state.test.js  statusline-wiring.test.js  tool-signature.test.js  user-config.test.js
worker/: ch-run-worker.sh  eval_drift.py  pyproject.toml
worker/context_health_worker/: __init__.py  calibration.py  config.py  contradiction.py  drift.py  embedder.py  judge.py  state_io.py  worker.py
worker/tests/: test_calibration.py  test_contradiction.py  test_drift.py  test_drift_shadow.py  test_judge.py  test_state_io.py  test_worker.py
(+10 files in other folders)
