[project]
name = "context-health-worker"
version = "0.1.0"
description = "Warm worker for the Context Health Detector: keeps a local FastEmbed model loaded and computes goal-drift out of band."
requires-python = ">=3.10"
dependencies = [
    "fastembed>=0.4.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
# Opt-in only: the contradiction detector's BYOK judge uses the official SDK,
# which resolves the user's own credentials. `uv sync --extra contradiction`.
contradiction = [
    "anthropic>=0.40",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["context_health_worker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
